dist/cdb/templates/api-deployment.yaml
---
# Source: cdb/templates/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cdb-api-deployment
  labels: 
    app.kubernetes.io/name: cdb
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: cdb
    app.kubernetes.io/managed-by: Helm
    app/language: java
    app/version: latest
spec:
  replicas: 3
  selector:
    matchLabels: 
        app.kubernetes.io/name: cdb
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/component: api
  template:
    metadata:
      labels: 
          app.kubernetes.io/name: cdb
          app.kubernetes.io/instance: release-name
          app.kubernetes.io/component: api
          app.kubernetes.io/part-of: cdb
          app.kubernetes.io/managed-by: Helm
          app/language: java
          app/version: latest
      annotations:
        checksum/config: 0b390107c5c00123aa4654ae194e62a39b9532e8fd7671aebd26cdc1e96aa24b
    spec:
      imagePullSecrets:
        - name: auth-master3-registry
      containers:
      - name: api
        image: registry.master3.takima.io/guide/kubernetes-resources/api:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "100Mi"
            cpu: "0.1"
          limits:
            memory: "300Mi"
            cpu: "0.5"
