dist/cdb/templates/api-service.yaml
---
# Source: cdb/templates/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cdb-api-service
  labels: 
        app.kubernetes.io/name: cdb
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/component: api
        app.kubernetes.io/part-of: cdb
        app.kubernetes.io/managed-by: Helm
        app/language: java
        app/version: latest
spec:
  selector: 
    app.kubernetes.io/name: cdb
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
